--- a/config/database.yml
+++ b/config/database.yml
@@ -83,4 +83,4 @@ production:
   <<: *default
   database: alderhill
   username: alderhill
-  password: <%= ENV['ALDERHILL_DATABASE_PASSWORD'] %>
+  password: gBjoCsUTGN2E
