database password to env

--- a/config/database.yml
+++ b/config/database.yml
@@ -83,4 +83,4 @@ production:
   <<: *default
   database: alderhill
   username: alderhill
-  password: gBjoCsUTGN2E
+  password: <%= ENV['DATABASE_PASWORD'] %>
